welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:18: error: type mismatch;
 found   : Unit
 required: String
	case  ()   => ()
              ^